force-app/main/default/objects/Untappd_API_Configuration__mdt/Untappd_API_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Untappd API.</description>
    <label>Untappd API Configuration</label>
    <pluralLabel>Untappd API Configurations</pluralLabel>
</CustomObject>